# MediChatBot

./: LICENSE  README.md  app.py  medical_prompts.py  pyproject.toml  requirements_for_local.txt
attached_assets/: Pasted-import-base64-import-os-from-google-import-genai-from-google-genai-import-types-def-generate-1745328342552.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
